--- a/style.css
+++ b/style.css
@@ -58,8 +58,25 @@ header {
 .navPages {
     gap: 2rem;
 }
-s
+
+.navPages i{
+    font-size: 2rem;
+    color: #8080805e;
+    transition: all .2s ease-in-out;
+}
+
+.activenav{
+    color: rgba(255, 255, 255, 0.733) !important;
+}
+
+.activea{
+    background-color: #2c2c2c;
+}
+.navPages i:hover{
+    color: rgba(255, 255, 255, 0.733);
+}
 .navPages a {
+    font-size: 2.5rem;
     padding: 8px;
     border-radius: 13px;
     transition: all .2s ease-in-out;
@@ -81,8 +98,12 @@ s
     padding: .8rem 1rem;
     gap: .5rem;
     transition: all .2s ease-in-out;
+    white-space: nowrap;
 }
 
+.btngroup i{
+    font-size: 1.2rem;
+}
 .btngroup:hover,
 .copyBtn:hover,
 .projectsSection .col2 a:hover,
@@ -121,7 +142,7 @@ s
     gap: .5rem;
     font-weight: 600;
     color: rgb(3, 151, 84);
-    background-color: rgb(208 250 223);
+    background-color: rgb(40 199 128 / 15%);
     padding: .5rem 1rem;
     border-radius: 18px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -151,10 +172,11 @@ s
     gap: .5rem;
     transition: all .2s ease-in-out;
     border: 1px solid rgb(70, 70, 70);
+    white-space: nowrap;
 }
 
 .sectionstart img {
-    width: 200px;
+    width: 250px;
     height: auto;
     border-radius: 50%;
     border: 10px solid rgb(43, 43, 43);
@@ -196,16 +218,24 @@ s
 .skillContent{
     justify-content: space-between;
     align-items: self-start;
+    gap: 2.5rem;
 }
 .skillContent .flexCol{
     justify-content: start;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 .skillContent .progress{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.925);
     border-radius: 1.4rem;
     height: 1.4rem;
-    width : 400px;
+    width : 600px;
+}
+
+.skillContent{
+    margin-top: 1rem;
+}
+.skillContent p{
+    color: lightgray;
 }
 .progress .bar-1{
     width: 90%;
@@ -216,12 +246,18 @@ s
 .progress .bar-3{
     width: 75%;
 }
+.progress .bar-4{
+    width: 85%;
+}
+.progress .bar-5{
+    width: 55%;
+}
 .progress .percent {
     opacity: 0;
     width : 100%;
     height : 1.4rem;
     border-radius : 1.4rem;
-    background: lightgray;
+    background: gray;
     animation: progress 1s ease-in 1s forwards;
     display: flex;
     justify-content: end;
@@ -320,4 +356,70 @@ footer{
     border-radius: 12px;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width:1049px) {
+    .skillContent .flexCol{
+        width: 100%;
+    }
+    .skillContent .progress{
+        width: auto;
+    }
+}
+@media (max-width:860px) {
+    header{
+        padding: 1rem;
+    }
+    .navPages{
+        gap: 1rem;
+    }
+    .skillContent img, .aboutContent img{
+        display: none;
+    }
+    .skillContent{
+        gap: 0px;
+    }
+    .col2{
+        grid-template-columns: 1fr;
+    }
+    .sectionstart{
+        justify-content: center;
+    }
+    .sectionstart .img{
+        width: auto;
+    }
+    .sectionstart img{
+        width: 60%;
+    }
+    .sectionstart .texts{
+        order: 2;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .socialSection{
+        justify-content: space-between;
+    }
+    .socials{
+        gap: .5rem;
+    }
+    .socials i{
+        font-size: 1.5rem;
+    }
+    .greenbtngr{
+        border-radius: 50%;
+        padding: 1rem;
+    }
+    .greenbtngr span{
+        display: none;
+    }
+    .lightbtngr{
+        font-size: 1.8rem;
+        white-space: nowrap;
+    }
+    .lightbtngr svg{
+        width: 8px;
+        height: 8px;
+    }   
 }
