--- a/style.css
+++ b/style.css
@@ -157,7 +157,11 @@ header {
     justify-content: space-around;
     margin-top: 2.5rem;
 }
-
+.texts{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .twobtns {
     margin-top: 2.5rem;
     justify-content: start;
