--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ header {
     gap: 1.5rem;
 }
 .skillContent .progress{
-    background-color: rgba(255, 255, 255, 0.925);
+    background-color: rgb(255 255 255 / 63%);
     border-radius: 1.4rem;
     height: 1.4rem;
     width : 600px;
