--- a/style.css
+++ b/style.css
@@ -72,9 +72,6 @@ header {
 .activea{
     background-color: #2c2c2c;
 }
-.navPages i:hover{
-    color: rgba(255, 255, 255, 0.733);
-}
 .navPages a {
     font-size: 2.5rem;
     padding: 8px;
@@ -88,7 +85,9 @@ header {
 .navPages a:hover {
     background-color: #2c2c2c;
 }
-
+.navPages a:hover .navPages i{
+    color: rgba(255, 255, 255, 0.733);
+}
 .btngroup {
     background-color: rgb(56, 56, 56);
     color: white !important;
