--- a/style.css
+++ b/style.css
@@ -415,11 +415,15 @@ footer{
   right: 20px;
   z-index: 1000;
 }
-
+.whatsapp-contact a{
+    font-size: 4rem;
+    color: white !important;
+}
 .whatsapp-contact i {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  background-color:green;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out;
 }
