--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ footer{
     color: white !important;
 }
 .whatsapp-contact i {
+  display: flex;
   width: 60px;
   height: 60px;
   border-radius: 50%;
