--- a/style.css
+++ b/style.css
@@ -11,19 +11,20 @@ html {
 }
 
 body {
-    background-color: rgb(22, 22, 22);
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
     padding: 1rem 2rem 2rem 2rem;
     font-family: "Saira Semi Condensed", sans-serif;
 }
 
 a {
     text-decoration: none;
-    color: #C0c0c0;
+    color: rgb(161 161 170);
     font-size: 1.5rem;
 }
 
 p {
-    color: #C0c0c0;
+    color: rgb(161 161 170);
     font-size: 2rem;
 }
 
@@ -45,9 +46,15 @@ p {
     gap: 1.5rem;
 }
 
+.col3{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
+}
+
 header {
-    border: 1.267198085784912px solid rgb(43, 43, 43);
-    background-color: rgb(33, 33, 33);
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     height: 100%;
     width: 100%;
     border-radius: 12px;
@@ -66,11 +73,11 @@ header {
 }
 
 .activenav{
-    color: rgba(255, 255, 255, 0.733) !important;
+    color: rgb(255, 255, 255) !important;
 }
 
 .activea{
-    background-color: #2c2c2c;
+    background-color: rgb(39 39 42/var(--tw-bg-opacity));
 }
 .navPages a {
     font-size: 2.5rem;
@@ -83,13 +90,14 @@ header {
 }
 
 .navPages a:hover {
-    background-color: #2c2c2c;
+    background-color: rgb(39 39 42/var(--tw-bg-opacity));
 }
 .navPages a:hover i{
-    color: rgba(255, 255, 255, 0.733);
+    color: rgb(255, 255, 255);
 }
 .btngroup {
-    background-color: rgb(56, 56, 56);
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     color: white !important;
     font-size: 1.6rem;
     font-weight: 600;
@@ -105,16 +113,16 @@ header {
 }
 .btngroup:hover,
 .copyBtn:hover,
-.projectsSection .col2 a:hover,
 .socials a:hover {
-    box-shadow: 0px 0px 1px 5px #2c2c2c;
+    box-shadow: 0px 0px 1px 3px rgb(39 39 42/var(--tw-bg-opacity));
 }
 
 .mainContainer {
-    border: 1.267198085784912px solid rgb(43, 43, 43);
-    background-color: rgb(33, 33, 33);
+    /* border: 1.267198085784912px solid rgba(63,63,70,.6); */
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
     border-radius: 12px;
-    padding: 2rem 1rem;
+    padding: 2rem 0rem;
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
@@ -133,7 +141,7 @@ header {
     font-size: 2.2rem;
     font-weight: 500;
     gap: 1rem;
-    color: #C0c0c0;
+    color: rgb(228 228 231/1);
 }
 
 .greenbtngr {
@@ -179,14 +187,14 @@ header {
 }
 
 .sectionstart img {
-    width: 250px;
+    width: 380px;
     height: auto;
-    border-radius: 50%;
-    border: 10px solid rgb(43, 43, 43);
+    border-radius: 13px !important;
 }
 
 .aboutSection{
-    background-color: #2c2c2c;
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     padding: 2.5rem;
     border-radius: 12px;
 }
@@ -205,7 +213,7 @@ header {
 
 .aboutContent .studyYear{
     font-size: 2.2rem;
-    color: darkgray;
+    color: rgb(228 228 231/1);
     font-weight: 600;
 }
 
@@ -214,7 +222,8 @@ header {
 }
 
 .skillsSection{
-    background-color: #2c2c2c;
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     padding: 2.5rem;
     border-radius: 12px;
 }
@@ -228,7 +237,7 @@ header {
     gap: 1.5rem;
 }
 .skillContent .progress{
-    background-color: rgb(255 255 255 / 63%);
+    background-color: rgb(255 255 255 / 10%);
     border-radius: 1.4rem;
     height: 1.4rem;
     width : 600px;
@@ -238,7 +247,8 @@ header {
     margin-top: 1rem;
 }
 .skillContent p{
-    color: lightgray;
+    color: rgb(228 228 231/1);
+    margin-bottom: .8rem;
 }
 .progress .bar-1{
     width: 90%;
@@ -258,14 +268,14 @@ header {
 .progress .percent {
     opacity: 0;
     width : 100%;
-    height : 1.4rem;
+    height : 1.1rem;
     border-radius : 1.4rem;
-    background: gray;
+    background: rgb(228 228 231/1);
     animation: progress 1s ease-in 1s forwards;
     display: flex;
     justify-content: end;
     align-items: center;
-    color: white;
+    color: black;
     font-size: 1.2rem;
     padding: .5rem;   
   }
@@ -283,36 +293,49 @@ header {
   }
   
 .projectsSection {
-    background-color: #2c2c2c;
-    padding: 2.5rem;
+    padding: 2.5rem 0rem;
     border-radius: 12px;
     gap: 1.5rem;
 }
 
-.projectsSection .col2{
+.projectsSection .col3{
     gap: 2rem;
 }
-.projectsSection .col2 a {
-    border: 1.267198085784912px solid rgb(230, 230, 230);
-    background-color: rgb(255, 255, 255);
+.projectsSection .col3 .project {
+    border: 1.267198085784912px solid rgba(63, 63, 70, .6);
+    background-color: rgb(39 39 42 / 64%);
     border-radius: 12px;
-    padding: 1.5rem;
     gap: 1.5rem;
     justify-content: start;
     transition: all .2s ease-in-out;
 }
+.col3 .project .flexCol{
+    padding: 1.5rem;    
+}
+.projectsSection .col3 .project:hover{
+    transform: scale(1.02);
+}
 
-.projectsSection .col2 a img {
-    width: 200px;
-    border-radius: 13px;
+.plink{
+    transition: all .4s ease-in-out;
+}
+.project:hover .plink{
+    color: #81bcff !important;
+}
+.projectsSection .col3 .project img {
+    width: 100%;
+    border-top-left-radius: 13px;
+    border-top-right-radius: 13px;
 }
 
 .phead {
-    color: white;
+    color: rgb(228 228 231/1);
     font-weight: 500;
-    font-size: 2.6rem;
+    font-size: 2.3rem !important;
 }
-
+.projectsSection .col3 p{
+    font-size: 2rem;
+}
 .worktog {
     justify-content: center;
     align-items: center;
@@ -326,7 +349,8 @@ header {
 }
 
 .socialSection{
-    background-color: #2c2c2c;
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     padding: 2.5rem;
     border-radius: 12px;
     justify-content: space-around;
@@ -355,7 +379,8 @@ footer{
 }
 
 .copyright{
-    background-color: #2c2c2c;
+    border: 1.267198085784912px solid rgba(63,63,70,.6);
+    background-color: rgb(39 39 42 / 64%);
     padding: 2.5rem;
     border-radius: 12px;
     justify-content: center;
@@ -374,7 +399,7 @@ footer{
     border: none;
     width: 50%;
     outline: none;
-    background-color: #2c2c2c;
+    background-color: rgb(39 39 42 / 64%);
     font-family: "Saira Semi Condensed", sans-serif;
     padding: 1.6rem;
     border-radius: 12px;
@@ -386,7 +411,7 @@ footer{
     font-size: 1.6rem;
     border: none;
     outline: none;
-    background-color: #2c2c2c;
+    background-color: rgb(39 39 42 / 64%);
     color: white;
     font-family: "Saira Semi Condensed", sans-serif;
     border-radius: 12px;
@@ -401,36 +426,20 @@ footer{
     cursor: pointer;
     border: none;
     outline: none;
-    background-color: #2c2c2c;
+    background-color: white;
+    border: 1px solid rgba(63,63,70,.6);
     font-family: "Saira Semi Condensed", sans-serif;
     padding: 1.6rem;
     border-radius: 12px;
-    color: white;
+    color: black;
     font-size: 1.6rem;
     text-align: center;
-}
-.whatsapp-contact {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 1000;
-}
-.whatsapp-contact a{
-    font-size: 4rem;
-    color: white !important;
-}
-.whatsapp-contact i {
-  display: flex;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color:green;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
-.whatsapp-contact i:hover {
-  transform: scale(1.1);
+.submit:hover{
+    background-color: rgb(39 39 42 / 64%);
+    color: white;
 }
 @media (max-width:1049px) {
     .skillContent .flexCol{
@@ -470,14 +479,11 @@ footer{
         width: -webkit-fill-available;
     }
     .sectionstart img{
-        width: 80%;
+        width: 100%;
     }
     .sectionstart .texts{
         order: 2;
-        text-align: center;
-        display: flex;
         flex-direction: column;
-        align-items: center;
     }
     .socialSection{
         justify-content: center;
@@ -545,4 +551,7 @@ footer{
     .contactSection .sectionstart .texts .twobtns{
         display: none;
     }
+    .col3{
+    grid-template-columns: 1fr;
+}
 }
