--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
-    overflow-y:hidden;
+    overflow-x:hidden !important;
+}
+.projects-Counter{
+  flex-wrap: nowrap;
 }
 .modal-content {
     background-color: #2c2c2c;
