--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     overflow-x:hidden !important;
 }
 .projects-Counter{
-  flex-wrap: nowrap;
+  flex-wrap: nowrap !important;
 }
 .modal-content {
     background-color: #2c2c2c;
